--- a/html/backAnalyse.html
+++ b/html/backAnalyse.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/backHome.css">
-    <script src="js/vue/vue.js"></script>
-</head>
-<body>
-        @@include('layout/backheader.html')
-        <section class="mainContent">
+@@include('layout/backheader.html',{title:""})
+        <section class="mainContent backAnalyse">
         </section>
     </section>
 </body>
