--- a/html/backAnalyse.html
+++ b/html/backAnalyse.html
@@ -1,4 +1,4 @@
-@@include('layout/backheader.html',{title:""})
+@@include('layout/backheader.html',{title:"數據分析"})
         <section class="mainContent backAnalyse">
         </section>
     </section>
