--- a/html/backArticle.html
+++ b/html/backArticle.html
@@ -1,4 +1,4 @@
-@@include('layout/backheader.html',{title:""})
+@@include('layout/backheader.html',{title:"文章管理"})
         <section class="mainContent backArticle">
         </section>
     </section>
