--- a/html/backObj.html
+++ b/html/backObj.html
@@ -1,4 +1,4 @@
-@@include('layout/backheader.html',{title:""})
+@@include('layout/backheader.html',{title:"虛擬物件管理"})
         <section class="mainContent backObj">
         </section>
     </section>
