--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -332,7 +332,7 @@
         </main>
     </section>
     <!--燈箱的我的上架-->
-    <section class="bouncingBox myListing_bouncing mainBgColor">
+    <section class="bouncingBox myListing_bouncing lightBox">
         <section class="title">
             <p class="categoryTitle">
                 <span class="titleLine">我的上架</span>
