--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -22,9 +22,9 @@
             <div class="pageContent">
                 <div class="breadcrumb">
                     <ul>
-                        <li><a href="homePage.html" class="lightColor">首頁></a></li>
-                        <li ><a href="articleAll.html" class="lightColor">藝論></a></li>
-                        <li><a href="articlePage.html" class="epBColor">這篇文章</a></li>
+                        <li><a href="homePage.html" class="lightColor">首頁</a></li>
+                        <li ><a href="articleAll.html" class="lightColor">>藝論</a></li>
+                        <li><a href="articlePage.html" class="epBColor">>這篇文章</a></li>
                     </ul>
                 </div>
                 <div class="authorShortIntro">
@@ -66,13 +66,21 @@
                     </article> -->
                     <div class="shareBar">
                         <div class="shareComment">
-                            <div class="like">
+                            <!-- <div class="like">
                                 <div class="pic">
                                     <img src="assets/image/articlePage_shareBar_like.png">
                                 </div>
                                 <span>999</span>
+                            </div> -->
+                            <div class="like mainColor deepColor">
+                                <div class="pic">
+                                    <img src="assets/image/all_like.png" alt="">
+                                </div>
+                                <span class="small">
+                                    99
+                                </span>
                             </div>
-                            <div class="pic">
+                            <div class="pic commentPic">
                                 <img src="assets/image/articlePage_shareBar_comment.png">
                             </div>
                         </div>
