--- a/html/homePage.html
+++ b/html/homePage.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="txt">
                     <h2 class="epBColor">藝起逛逛</h2>
-                    <p class="deepColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，美不只有一種形式。</p>
+                    <p>多樣化的展品，<br>豐富的展演方式。<br>在這裡，美不只有一種形式。</p>
                     <button class="round">藝廊</button>
                 </div>
             </section>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="txt">
                     <h2 class="epBColor">會員中心</h2>
-                    <p class="deepColor">將美通通包含其中，<br>將所有體驗美的過程記錄下來。</p>
+                    <p>將美通通包含其中，<br>將所有體驗美的過程記錄下來。</p>
                     <button class="round">會員中心</button>
                 </div>
             </section>
