--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -79,14 +79,14 @@
                     <div class="img">
                         <img :src="item[index].img">
                         <!-- 定位absolute，父層prouductItem，定位position -->
-                        <div class="like mainColor deepBgColor">
+                        <div class="like mainColor">
                             <div class="pic">
-                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                                <img src="assets/image/all_like.png" alt="">
                             </div>
-                            <span class="small">
+                            <span class="small deepColor">
                                 75
                             </span>
-                    </div>
+                        </div>
                     </div>
                     <div class="text">
                         <h4>{{item[index].title}}</h4>
@@ -108,11 +108,11 @@
                     <div class="img">
                         <img :src="item[index+1].img">
                         <!-- 定位absolute，父層prouductItem，定位position -->
-                        <div class="like mainColor deepBgColor">
+                        <div class="like mainColor">
                             <div class="pic">
-                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                                <img src="assets/image/all_like.png" alt="">
                             </div>
-                            <span class="small">
+                            <span class="small deepColor">
                                 75
                             </span>
                         </div>
@@ -137,11 +137,11 @@
                     <div class="img">
                         <img :src="item[index+2].img">
                         <!-- 定位absolute，父層prouductItem，定位position -->
-                        <div class="like mainColor deepBgColor">
+                        <div class="like mainColor">
                             <div class="pic">
-                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                                <img src="assets/image/all_like.png" alt="">
                             </div>
-                            <span class="small">
+                            <span class="small deepColor">
                                 75
                             </span>
                         </div>
@@ -166,11 +166,11 @@
                     <div class="img">
                         <img :src="item[index+3].img">
                         <!-- 定位absolute，父層prouductItem，定位position -->
-                        <div class="like mainColor deepBgColor">
+                        <div class="like mainColor">
                             <div class="pic">
-                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                                <img src="assets/image/all_like.png" alt="">
                             </div>
-                            <span class="small">
+                            <span class="small deepColor">
                                 75
                             </span>
                         </div>
@@ -211,11 +211,11 @@
                     <div class="img">
                         <img :src="product.img">
                         <!-- 定位absolute，父層prouductItem，定位position -->
-                        <div class="like mainColor deepBgColor">
+                        <div class="like mainColor">
                             <div class="pic">
-                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                                <img src="assets/image/all_like.png" alt="">
                             </div>
-                            <span class="small">
+                            <span class="small deepColor">
                                 75
                             </span>
                         </div>
