--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -80,12 +80,12 @@
         </div>
     </div>
     <!--燈箱的帳號管理-->
-    <section class="bouncingBox accountManagement_bouncing mainBgColor">
+    <section class="bouncingBox accountManagement_bouncing lightBox">
         <section class="title">
             <p>帳號管理
                 <span class="titleButton">
-                    <button class="button modifyData epFBgColor" type="button">修改資料</button>
-                    <button class="button confirmTheChanges epFBgColor" type="button">確認</button>
+                    <button class="modifyData round round3dBtn" type="button">修改資料</button>
+                    <button class="confirmTheChanges round round3dBtn" type="button">確認</button>
                 </span>
             </p>
             <span class="close3D"><i class="fas fa-times"></i></span>
@@ -118,7 +118,7 @@
         </main>
     </section>
     <!--燈箱的收藏-->
-    <section class="bouncingBox collect_bouncing mainBgColor">
+    <section class="bouncingBox collect_bouncing lightBox">
         <section class="title">
             <p class="categoryTitle">
                 <span class="titleLine">收藏</span>
@@ -140,7 +140,7 @@
                             <span>$30,000</span>
                             <span class="time small">剩餘2小時47分17秒</span>
                         </p>
-                        <button class="button epFBgColor" type="button">我要競標</button>
+                        <button class="round round3dBtn" type="button">我要競標</button>
                     </section>
                 </section>
                 <section class="commodity">
@@ -154,7 +154,7 @@
                             <span>$30,000</span>
                             <span class="time small">剩餘2小時47分17秒</span>
                         </p>
-                        <button class="button epFBgColor" type="button">我要競標</button>
+                        <button class="round round3dBtn" type="button">我要競標</button>
                     </section>
                 </section>
             </section>
@@ -162,12 +162,12 @@
         </main>
     </section>
     <!--燈箱的消費紀錄-->
-    <section class="bouncingBox consumptionRecord_bouncing mainBgColor">
+    <section class="bouncingBox consumptionRecord_bouncing lightBox">
         <section class="title">
             <p>消費紀錄
                 <span class="titleButton">
-                    <button class="button epFBgColor" type="button">現在訂單</button>
-                    <button class="button epFBgColor" type="button">歷史訂單</button>
+                    <button class="round round3dBtn" type="button">現在訂單</button>
+                    <button class="round round3dBtn" type="button">歷史訂單</button>
                 </span>
             </p>
             <span class="close3D"><i class="fas fa-times"></i></span>
@@ -200,8 +200,8 @@
                         <p>訂單金額:$3000</p>
                     </section>
                     <!-- <section class="buttonGroup">
-                        <button class="button epFBgColor" type="button">按鈕</button>
-                        <button class="button epFBgColor" type="button">按鈕</button>
+                        <button class="round round3dBtn" type="button">按鈕</button>
+                        <button class="round round3dBtn" type="button">按鈕</button>
                     </section> -->
                 </section>
             </section>
@@ -232,20 +232,20 @@
                         <p>訂單金額:$30,000</p>
                     </section>
                     <!-- <section class="buttonGroup">
-                        <button class="button epFBgColor" type="button">按鈕</button>
-                        <button class="button epFBgColor" type="button">按鈕</button>
+                        <button class="round round3dBtn" type="button">按鈕</button>
+                        <button class="round round3dBtn" type="button">按鈕</button>
                     </section> -->
                 </section>
             </section>
         </main>
     </section>
     <!--燈箱的客製化人物-->
-    <section class="bouncingBox customCharacter_bouncing mainBgColor">
+    <section class="bouncingBox customCharacter_bouncing lightBox">
         <section class="title">
             <p>客製化人物
                 <span class="titleButton">
-                    <button class="button epFBgColor characterModification" type="button">修改資料</button>
-                    <button class="button epFBgColor characterConfirmation" type="button">確認</button>
+                    <button class="round round3dBtn characterModification" type="button">修改資料</button>
+                    <button class="round round3dBtn characterConfirmation" type="button">確認</button>
                 </span>
             </p>
             <span class="close3D"><i class="fas fa-times"></i></span>
@@ -340,8 +340,8 @@
                 <span class="subtitle">分類</span>
             </p>
             <section class="buttonGroup">
-                <!-- <button class="button epFBgColor" type="button">目前上架</button> -->
-                <!-- <button class="button epFBgColor" type="button">瀏覽紀錄</button> -->
+                <!-- <button class="round round3dBtn" type="button">目前上架</button> -->
+                <!-- <button class="round round3dBtn" type="button">瀏覽紀錄</button> -->
             </section>
             <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
@@ -360,7 +360,7 @@
                             </section>
                             <section class="timeAndButton">
                                 <span class="time">剩餘2小時47分17秒</span>
-                                <button class="button epFBgColor" type="button">前往商品頁面</button>
+                                <button class="round round3dBtn" type="button">前往商品頁面</button>
                             </section>
                         </section>
 
@@ -379,7 +379,7 @@
                             </section>
                             <section class="timeAndButton">
                                 <span class="time">剩餘2小時47分17秒</span>
-                                <button class="button epFBgColor" type="button">前往商品頁面</button>
+                                <button class="round round3dBtn" type="button">前往商品頁面</button>
                             </section>
                         </section>
 
@@ -404,7 +404,7 @@
         </sectio>
         <section class="item loginAndListing">
             <p class="login">登入</p>
-            <button class="button epFBgColor" type="button">上架</button>
+            <button class="round round3dBtn" type="button">上架</button>
         </section>
     </nav> -->
     <!--3D背景的js-->
