1.like click換顏色(文章和商品頁) 2.文章檢舉按鈕hover出現提示 3.文章刊登預覽取消

--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -41,6 +41,7 @@
                         <div class="pic">
                             <img src="assets/image/articlePage_authorShortIntro_exclamation.png">
                         </div>
+                        <span class="small">檢舉</span>
                     </div>
                 </div>
                 <article class="page">
@@ -53,17 +54,6 @@
                             <p class="deepColor">生活中，若報告出現了，我們就不得不考慮它出現了的事實。拿破崙在不經意間這樣說過，勇氣如愛情，需要希望來滋養。我希望諸位也能好好地體會這句話。孟子在不經意間這樣說過，君子有三樂，而王天下不與存焉。父母俱存，兄弟無故，一樂也; 仰不愧于天，俯不怍於人，二樂也; 得天下英才而教育之，三樂也。君子有三樂，而王天下不與存焉。<br>希望大家能從這段話中有所收穫。阿拉伯說過一句富有哲理的話，你可以相信一座山移動了位置，卻不必去相信一個人改變了自己的個性。我希望諸位也能好好地體會這句話。泰戈爾說過一句富有哲理的話，有勇氣在自己生活中嘗試解決人生新問題的人，正是那些使社會臻於偉大的人！那些僅僅循規蹈矩過活的人，並不是在使社會進步，只是在使社會得以維持下去。這段話可說是震撼了我。報告對我來說，已經成為了我生活的一部分。老舊的想法已經過時了。<br>培根說過一句很有意思的話，時間是衡量事業的標準。這激勵了我。不要先入為主覺得報告很複雜，實際上，報告可能比你想的還要更複雜。報告改變了我的命運。萊辛曾經說過，我們的驕傲多半是基於我們的無知！ 這段話看似複雜，其中的邏輯思路卻清晰可見。報告必定會成為未來世界的新標準。屈原說過一句很有意思的話，路漫漫其修遠兮，吾將上下而求索。這段話讓我所有的疑惑頓時豁然開朗。儘管如此，我們仍然需要對報告保持懷疑的態度。伯爾曾經認為，消磨時間是一種多麼勞累、多麼可怕的事情啊，這只肉眼看不見的秒針無時不在地平線下轉圈，你一再醉生夢死地消磨時間，到頭來你還得明白，它仍在繼續轉圈，無情地繼續轉圈。這段話看似複雜，其中的邏輯思路卻清晰可見。說到報告，你會想到什麼呢？若能夠洞悉報告各種層面的含義，勢必能讓思維再提高一個層級。<br>徐悲鴻說過，每個人的一生都應該給後代留下一些高尚有益的東西。帶著這句話，我們還要更加慎重的審視這個問題。做好報告這件事，可以說已經成為了全民運動。拉伯雷在過去曾經講過，在病人即將痊癒時，請來的醫生是幸運的。這段話令我陷入了沈思。想必大家都能了解報告的重要性。報告的出現，必將帶領人類走向更高的巔峰。報告的存在，令我無法停止對他的思考。每個人都不得不面對這些問題。在面對這種問題時，務必詳細考慮報告的各種可能。<br>巴爾扎克曾講過，只有那些曉得控制他們的缺點，不讓這些缺點控制自己的人才是強者。這段話讓我的心境提高了一個層次。對報告進行深入研究，在現今時代已經無法避免了。不難發現，問題在於該用什麼標準來做決定呢？在人生的歷程中，報告的出現是必然的。動機，可以說是最單純的力量。我們要學會站在別人的角度思考。吳起說過一句發人省思的話，用兵必須審敵虛實而趨其危。這是撼動人心的。所謂報告，關鍵是報告需要如何解讀。</p>
                         </div>
                     </div>
-                    <!-- <article class="item TxtItem">
-                        <div class="txt">
-                            <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                            <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </div>
-                    </article>
-                    <article class="item TxtItem">
-                        <div class="txt">
-                            <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </div>
-                    </article> -->
                     <div class="shareBar">
                         <div class="shareComment">
                             <!-- <div class="like">
@@ -83,6 +73,12 @@
                             <div class="pic commentPic">
                                 <img src="assets/image/articlePage_shareBar_comment.png">
                             </div>
+                            <!-- <div class="report">
+                                <div class="pic">
+                                    <img src="assets/image/articlePage_authorShortIntro_exclamation.png">
+                                </div>
+                                <span>檢舉</span>
+                            </div> -->
                         </div>
                         <div class="socialMedia">
                             <div class="pic">
@@ -187,7 +183,9 @@
             <!-- 要隱藏留言區用的 -->
             <section class="hiddenArea">
                 <section class="commentArea">
-                    <div class="commentClose"></div>
+                    <span class="commentClose">
+                        <i class="fas fa-times"></i>
+                    </span>
                     <h4>回應(<span>6</span>)</h4>
                     <div class="commentInput">
                         <div class="memberIcon">
