--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -116,7 +116,7 @@
             <div class="titleBox size marginAuto">
                 <h4>124件商品</h4>
                 <div class="buttonBox">
-                    <button class="square" id="selectorButton">篩選器</button>
+                    <button class="square" id="selectorButton" v-on:click="selector(0)">篩選器</button>
                 </div>
             </div>
             <section class="productSelector displayNone size marginAuto" id="productSelector">
