還沒搞定的敘述滾輪、藝廊加上div放動畫

--- a/galleryAll/gallery/gallery.html
+++ b/galleryAll/gallery/gallery.html
@@ -201,6 +201,7 @@
     </header>
     <!-- header結束 -->
     <div id="stats"></div>
+    <!-- 香菸 -->
     <div class="lightBox displayNone" id="lightBox">
         <i class="closeLightBox fas fa-times" id="closeLightBox"></i>
         <div class="photoBox">
@@ -244,6 +245,31 @@
             <a href="../../productSingle.html" class="goPrice round">前往出價</a>
         </div>
     </div>
+    <!-- 第二個 -->
+    <section class="lightBox displayNone">
+        <i class="closeLightBox fas fa-times"></i>
+        <div class="photoBox"></div>
+        <div class="lightBoxContent">test01</div>
+    </section>
+    <!-- 第三個 -->
+    <section class="lightBox displayNone">
+        <i class="closeLightBox fas fa-times"></i>
+        <div class="photoBox"></div>
+        <div class="lightBoxContent">test02</div>
+    </section>
+    <!-- 第四個 -->
+    <section class="lightBox displayNone">
+        <i class="closeLightBox fas fa-times"></i>
+        <div class="photoBox"></div>
+        <div class="lightBoxContent">test03</div>
+    </section>
+    <!-- 第五個 -->
+    <section class="lightBox displayNone">
+        <i class="closeLightBox fas fa-times"></i>
+        <div class="photoBox"></div>
+        <div class="lightBoxContent">test04</div>
+    </section>
+    <!-- 提示 -->
     <div class="galleryHint" id="galleryHint">
         <i class="closeHint fas fa-times" id="closeHint"></i>
         <p>放大縮小：滾輪</p>
