--- a/html/login.html
+++ b/html/login.html
@@ -9,28 +9,35 @@
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="js/vue/vue.js"></script>
 </head>
 
 <body>
     @@include('layout/headerNormal.html')
 
     <!-- 登入註冊區 -->
-    <section class="loginArea ">
+    <section id="loginArea" :class="liginClass">
         <!-- 切換顯示用input display:none -->
         <input type="checkbox" id="changeBtn" class="">
         <article class="size aidBgColor">
             <!-- 輸入區 -->
             <article>
                 <form action="#">
-                    <input type="text" placeholder="帳號">
-                    <input type="password" placeholder="密碼">
+                    <label for="memId">帳號</label>
+                    <input type="text" placeholder="ArtTogether" id="memId">
+                    <label for="memPsw">密碼</label>
+                    <input type="password" placeholder="＊＊＊＊" id="memPsw">
                     <input type="submit" value="登入" class="round">
                 </form>
                 <form action="#">
-                    <input type="text" placeholder="帳號" required>
-                    <input type="password" placeholder="密碼" required>
-                    <input type="password" placeholder="確認密碼" required>
-                    <input type="email" placeholder="信箱" required>
+                    <label for="addMemId">帳號</label>
+                    <input type="text" placeholder="ArtTogether" required id="addMemId">
+                    <label for="addMemPsw">密碼</label>
+                    <input type="password" placeholder="＊＊＊＊" required id="addMemPsw">
+                    <label for="addMemPswAgain">確認密碼</label>
+                    <input type="password" placeholder="＊＊＊＊" required id="addMemPswAgain">
+                    <label for="email">信箱</label>
+                    <input type="email" placeholder="ArtTogether@gmail.com" required id="email">
                     <input type="submit" value="註冊" class="round">
                 </form>
             </article>
@@ -38,18 +45,42 @@
             <article class="">
                 <article>
                     <img src="assets\image\all_logo.png" alt="">
-                    <label for="changeBtn" class="roundOutline ">註冊</label>
+                    <input type="button" value="註冊" class="roundOutline" @click="changeBtn = !changeBtn">
                     <!-- <button>註冊</button> -->
                 </article>
                 <article>
                     <img src="assets\image\all_logo.png" alt="">
-                    <label for="changeBtn" class="roundOutline ">登入</label>
+                    <input type="button" value="登入" class="roundOutline" @click="changeBtn = !changeBtn">
                     <!-- <button>登入</button> -->
                 </article>
             </article>
         </article>
     </section>
     @@include('layout/footer.html')
+
+    <script>
+        new Vue({
+            el: '#loginArea',
+            data: {     //變數放在這!
+                changeBtn:false,
+            },
+            methods: {  //函數大部份放在這!
+                
+                
+            },
+            computed: {  //函數也可以放在這!但是放在這裡的函數，不能傳參數，一定要有回傳值
+                liginClass(){
+                    return{
+                        loginArea:true,
+                        active: this.changeBtn,
+                    };
+                }
+            },
+        });
+    </script>
+
+
+
 </body>
 
 </html>
