修改原點樣式 應加輸入框提示

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -93,20 +93,20 @@
         <main>
             <section class="accountManagement_information">
                 <p class="information">會員編號：<span>0123456（pk）</span></p>
-                <p class="information">會員暱稱：<span class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
+                <p class="information">會員暱稱：<span class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1" placeholder="請輸入您的會員暱稱"></input>
                 </p>
                 <p class="information">會員帳號：<span>milktea</span></p>
                 <p class="information">會員密碼：<span>20190119</span></p>
                 </p>
-                <p class="information">姓名：<span class="showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2"></input>
+                <p class="information">姓名：<span class="showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2" placeholder="請輸入您的姓名"></input>
                 </p>
-                <p class="information">信箱：<span class="showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3"></input>
+                <p class="information">信箱：<span class="showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3" placeholder="請輸入您的信箱"></input>
                 </p>
-                <p class="information">電話：<span class="showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4"></input>
+                <p class="information">電話：<span class="showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4" placeholder="請輸入您的電話"></input>
                 </p>
-                <p class="information">地址：<span class="showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5"></input>
+                <p class="information">地址：<span class="showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5" placeholder="請輸入您的地址"></input>
                 </p>
-                <p class="information">信用卡：<span class="showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6"></input>
+                <p class="information">信用卡：<span class="showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6" placeholder="請輸入您的信用卡"></input>
                 </p>
                 <p class="information">註冊日期：<span>20220224</span>
                 </p>
