增加文字敘述

--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -94,6 +94,9 @@
                             <span class="small lightColor">創作者：</span>
                             <span class="small lightColor">{{item.creator}}</span>
                         </p>
+                        <p class="introText">
+                            <span>{{item.intro}}</span>
+                        </p>
                     </div>
                     <div class="footer">
                         <span class="epBColor">{{item.price}}</span>
@@ -143,6 +146,9 @@
                         <p>
                             <span class="small lightColor">創作者：</span>
                             <span class="small lightColor">{{product.creator}}</span>
+                        </p>
+                        <p class="introText">
+                            <span>{{product.intro}}</span>
                         </p>
                     </div>
                     <div class="footer">
