--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -278,7 +278,7 @@
                         </section>
                         <section>
                             <span>膚色：</span>
-                            <input class="adjustmentLever" disabled type="range" min="0" max="2">
+                            <input class="adjustmentLever" disabled type="range" min="0" max="2" oninput="ChangeCookieImg()" onchange="ChangeCookieImg()">
                             <!--
                             <span class="adjustmentLever">
                                 <span class="adjustmentLeverContent"></span>
