--- a/html/homePage.html
+++ b/html/homePage.html
@@ -91,7 +91,7 @@
                     <img src="assets/image/home_homGallery_gallery.png" alt="">
                 </div>
                 <div class="txt">
-                    <h2 class="epBColor">藝起逛逛</h2>
+                    <h2 class="deepColor">藝起逛逛</h2>
                     <p>多樣化的展品，<br>豐富的展演方式。<br>在這裡，美不只有一種形式。</p>
                     <button class="round">藝廊</button>
                 </div>
@@ -104,7 +104,7 @@
                     <img src="assets/image/3dSurroundView.jpg" alt="">
                 </div>
                 <div class="txt">
-                    <h2 class="epBColor">會員中心</h2>
+                    <h2 class="deepColor">會員中心</h2>
                     <p>將美通通包含其中，<br>將所有體驗美的過程記錄下來。</p>
                     <button class="round">會員中心</button>
                 </div>
