--- a/galleryAll/gallery/gallery.html
+++ b/galleryAll/gallery/gallery.html
@@ -13,113 +13,6 @@
     <script src="OBJLoader.js"></script>
     <script src="threex.domevents.js"></script>
     <link rel="stylesheet" href="../../assets/css/style.css">
-    <style>
-      .lightBox{
-          background-color: white;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 90%;
-          height: 90vh;
-          border-radius: 30px;
-          z-index: 9999;
-          /* display: flex;        */
-      }
-      .lightBox .closeLightBox{
-          position: absolute;
-          top: 3%;
-          right: 3%;
-          z-index: 99;
-          cursor: pointer;
-      }
-      .lightBox .photoBox{
-          /* background-color:rgb(0, 0, 0); */
-          width: 50%;
-          height: 80%;
-          display: inline-block;
-          position: absolute;
-          top: 10%;
-          left: 5%;
-          /* transform: translateY(-70%); */
-      }
-      .lightBox .lightBoxContent{
-          width: 40%;
-          background-color: rgb(255, 255, 255);
-          position: absolute;
-          height: 80%;
-          top: 10%;
-          right: 2%;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          box-sizing: border-box;
-          padding: 0 2%;
-      }
-      .lightBox .lightBoxContent p{
-          margin-bottom: 5%;
-      }
-      .lightBox .lightBoxContent .goPrice{
-          position: absolute;
-          bottom: 0;
-          right: 5%;
-      }
-      .round {
-        color: #141414;
-        font-size: 1em;
-        background-color: #FFD60A;
-        padding: 5px 20px;
-        border-radius: 200px;
-        border: 2px solid #FFD60A;
-    }
-    .roundOutline {
-        color: #141414;
-        font-size: 1em;
-        background-color: transparent;
-        padding: 5px 20px;
-        border-radius: 200px;
-        border: 2px solid #FFD60A;
-    }
-    a{
-        text-decoration: none;
-        color: #141414;
-    }
-    .galleryHint{
-        position: absolute;
-        top: 25%;
-        left: 50%;
-        /* transform: translateY(-50%); */
-        transform: translateX(-50%);
-        background-color: rgb(255, 255, 255);
-        box-sizing: border-box;
-        padding: 5%;
-        border-radius: 30px;
-        height: 50%;
-        display: flex;
-        align-content: center;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .galleryHint p{
-        width: 60%;
-        font-size: large;
-    }
-    .galleryHint .closeHint{
-        width: 10%;
-        height: 10%;
-        position: absolute;
-        right: 1%;
-        top: 8%;
-        cursor: pointer;
-    }
-    .displayNone{
-        display: none;
-      }
-      #banksy{
-     height: 100vh;
-    }
-    </style>
   </head>
   <body>
     <!-- header -->
@@ -205,8 +98,8 @@
     <!-- header結束 -->
     <div id="stats"></div>
     <!-- 香菸 -->
-    <div class="lightBox displayNone" id="lightBox">
-        <i class="closeLightBox fas fa-times" id="closeLightBox"></i>
+    <div class="lightBox displayNone cigaretteBox" id="lightBoxCi">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxCi"></i>
         <div class="photoBox">
             <div class="cigarette">
                 <div class="cigaretteBody">
@@ -249,8 +142,8 @@
         </div>
     </div>
     <!-- slitting -->
-    <section class="lightBox displayNone">
-        <i class="closeLightBox fas fa-times"></i>
+    <section class="lightBox displayNone" id="lightBoxSl">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxSl"></i>
         <div class="photoBox">
             <div class="slitting">
                 <main id="banksy">
@@ -280,13 +173,18 @@
                 </div>
                 <input ref="art" type="file" accept="image/*" @change="artSelected">
                 </main>
-                        </div>
             </div>
-        <div class="lightBoxContent">test01</div>
+        </div>
+        <div class="lightBoxContent">
+            <h3>寂寞菸火</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="../../productSingle.html" class="goPrice round">前往出價</a>
+        </div>
     </section>
     <!-- flip -->
-    <section class="lightBox displayNone">
-        <i class="closeLightBox fas fa-times"></i>
+    <section class="lightBox displayNone" id="lightBoxFl">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxFl" ></i>
         <div class="photoBox">
             <div class="flip">
                 <div class="wrap">
@@ -301,11 +199,16 @@
                 </div>
             </div>
         </div>
-        <div class="lightBoxContent">test02</div>
+        <div class="lightBoxContent">
+            <h3>寂寞菸火</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="../../productSingle.html" class="goPrice round">前往出價</a>
+        </div>
     </section>
     <!-- Mona Lisa -->
-    <section class="lightBox">
-        <i class="closeLightBox fas fa-times"></i>
+    <section class="lightBox  displayNone" id="lightBoxMo">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxMo"></i>
         <div class="photoBox">
             <div class="MonaLisa">
                 <div class="wrap">
@@ -322,13 +225,23 @@
                 </div>
             </div>
         </div>
-        <div class="lightBoxContent">test03</div>
+        <div class="lightBoxContent">
+            <h3>寂寞菸火</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="../../productSingle.html" class="goPrice round">前往出價</a>
+        </div>
     </section>
     <!-- bounce -->
-    <section class="lightBox displayNone">
-        <i class="closeLightBox fas fa-times"></i>
+    <section class="lightBox displayNone" id="lightBoxBo">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxBo"></i>
         <div class="photoBox"></div>
-        <div class="lightBoxContent">test04</div>
+        <div class="lightBoxContent">
+            <h3>寂寞菸火</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="../../productSingle.html" class="goPrice round">前往出價</a>
+        </div>
     </section>
     <!-- 提示 -->
     <div class="galleryHint" id="galleryHint">
