--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/articlePage.js"></script>
+    <!-- 跳窗套件 -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
     <!-- 主標32px letter-spacing:-0.512px line-height:40px
